# follow_roadmap

./: README.md
server_side/communication/: README.md
server_side/communication/src/: DtoC_server.py  adm2ctrl_pb2_grpc.py  adm_replay.py  gps_server.py  search.py
server_side/formation_common/: config_formation_continous.py  cubic_spline_planner.py  formation_core.py  formation_zoo.py  global_planning.py
server_side/formation_continous/src/: formation_trajectory_planning.py  (+1 more)
server_side/grpc_ad_msgs/: CMakeLists.txt  README.md  package.xml
server_side/grpc_communication/: CMakeLists.txt  README.md  package.xml
server_side/grpc_communication/launch/: communication.launch
server_side/grpc_communication/src/: receive_ad_info.py  receive_gnss.py  reset.bash  send_traj.py  stage_control.py
server_side/grpc_communication/src/else/: gps_client.py  traj_plan_server.py
server_side/grpc_communication/src/libproto/: adm2ctrl_pb2_grpc.py  data_transf_pb2_grpc.py
server_side/grpc_communication/src/proto/: adm2ctrl.proto  data_transf.proto
simulation/launch/: multi_car_simulation_scene_1217.launch  multi_car_simulation_scene_1217biandui.launch  multi_car_simulation_scene_1217daji.launch  multi_car_simulation_scene_1217jijie.launch  multi_car_simulation_scene_1217zhencha.launch  multi_follow_roadmap.launch
simulation/src/: analysys.py  headings.txt  headings8.txt  listen_gps.py  multi_sim_node.py  multi_sim_node_scene.py  sim_node_diff.py
vehicle_side/trajectory_tracking/: README.md  pure_trajectory_tracking.launch
visualize/src/: vi_plot.py
(+35 files in other folders)
